# tokimo-package-filetype-detector

./: Cargo.toml  README.md
src/: detect.rs  lib.rs  magic.rs
